# stdash

./: pyproject.toml  requirements.txt
note/: Untitled.ipynb
src/stdash/: app.py
